<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:title="@string/pref_temperature_units_label"
        android:key="@string/pref_temperature_units_key"
        android:dialogTitle="@string/pref_temperature_units_dialog_title"
        android:entries="@array/pref_temperature_units_entries"
        android:entryValues="@array/pref_temperature_units_values"
        android:defaultValue="@string/pref_temperature_units_value_metric"/>

</PreferenceScreen>